# SpeakerFlow_AI

./: .coveragerc  alembic.ini  pyproject.toml  pytest.ini
.github/workflows/: service-ci.yml
src/speakerflow_ai/ai/: __init__.py  models.py  service.py  workflow.py
src/speakerflow_ai/alembic/: env.py
src/speakerflow_ai/alembic/versions/: 8882b7d1d63f_initial_migration.py
src/speakerflow_ai/database/: __init__.py  speaking_request_db.py
src/speakerflow_ai/models/: __init__.py  speaking_request.py
src/speakerflow_ai/tests/: conftest.py
src/speakerflow_ai/tests/integration/test_database/: test_speaking_request_db.py
src/speakerflow_ai/tests/integration/test_web_app/: test_main.py  test_speaking_requests.py
src/speakerflow_ai/tests/unit/test_models/: test_address.py  test_speaking_request.py
src/speakerflow_ai/tests/unit/test_web_app/: __init__.py
src/speakerflow_ai/web_app/: api_requests.py  config.py  main.py  responses.py
